
Directory tools/scripts
 asimstarter.in            Locally Modified          305 
 awb-shell                 Locally Modified          305 

Directory etc
 asimrc.template           Locally Modified          305 
 awb.config.template.in    Locally Modified          305 

Updating with awb changes (rev. 2774 - Carl Beckmann)

+ Going live with split of simcore into simcore, awb, and awb-doc:

  - fixed a minor bug in awb-shell that was causing a spurious warning
    message on startup

  - added a check to awb-shell to make sure we have awb in our workspace

  - fixed various templates in /etc to include he new awb package
    and some new awb-shell asimrc configuration parameters

  - Added awb-doc to asim.pack file

  - added new awb-* tool name aliases for old asim-* tools to asimstarter

----------
spartha1    Date: Tue Jun  9 18:04:15 EDT 2009  CSN: CSN-awb-307
                  Tue Jun  9 22:04:15 UTC 2009


Directory tools/scripts
 tlist2bm.pl               Locally Modified          305 

Updating with asim-awb changes (rev. 2777 - Steve Raasch)

Update to add option to simply dump trace names

----------
pellauer    Date: Wed Jun 10 14:44:57 EDT 2009  CSN: CSN-awb-308
                  Wed Jun 10 18:44:57 UTC 2009


Directory etc
 asim.pack                 Locally Modified          307 


Updating name of public AWB repository to be "awb" from "awb-mit".

Michael P.

----------
pellauer    Date: Wed Jun 10 17:26:58 EDT 2009  CSN: CSN-awb-309
                  Wed Jun 10 21:26:58 UTC 2009


Directory libperl/Asim/lib
 Asim.pm.in                Locally Modified          308 


* Added Libdir and Includedir to Asim.pm.

Michael P.


----------
pellauer    Date: Thu Jun 11 14:33:33 EDT 2009  CSN: CSN-awb-310
                  Thu Jun 11 18:33:33 UTC 2009


Directory libperl/Asim/lib/Asim/Workspace
 Template.pm               Locally Modified          309 


* Update broken searchpath in Template.

Michael P.
